# hh-automative

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
config/: dict_of_resumes.py  resumes.json  search_profiles.json  settings.py
dashboard/: app.py
docs/: index.html  styles.css
hh_automative/: __init__.py  __main__.py  ai_assist.py  analytics.py  auth.py  browser.py  cli.py  dashboard.py  dashboard_data.py  error_taxonomy.py  errors.py  hh_form.py  llm.py  llm_cli.py  logging_utils.py  models.py  relevance.py  response.py  resume_sync.py  resumes.py  run_launcher.py  runner.py  search.py  settings.py  state.py
resources/: resume-ru.txt
scripts/: check.py
tests/: test_ai_assist.py  test_analytics.py  test_cli.py  test_dashboard.py  test_dashboard_data.py  test_error_taxonomy.py  test_hh_form.py  test_llm.py  test_llm_cli.py  test_relevance.py  test_response_ai.py  test_response_submit.py  test_resume_sync.py  test_resumes.py  test_run_launcher.py  test_search.py  test_search_collect.py  test_settings.py  test_smoke.py  test_state.py
utils/: browser_utils.py  data_utils.py  element_actions.py  login_utils.py  resume_utils.py  search_utils.py
