[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hh-automative"
version = "0.2.0"
description = "Controlled Selenium automation for hh.ru vacancy responses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "selenium>=4.23.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
hh-automative = "hh_automative.cli:main"

[tool.setuptools.packages.find]
include = ["hh_automative*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
